--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header>
         <div class="main-menu">
             <div class="menu">
-                <img class="radius" src="/imagenes/logo.png">
+                <img class="radius" src="imagenes/logo.png">
                 <ul class="menu-link">              
                     <li>
                         <a href="#">¿Quienes Somos?</a>
@@ -45,25 +45,25 @@
     <section id="servicios" class="container-grid">
         <div class="main-servicios">
             <div class="image-servicios">
-                <img src="/imagenes/sevicios.jpg">
+                <img src="imagenes/sevicios.jpg">
             </div>
             <a> <i><strong>¡Servicios Cubiertos! </strong></i><br>Servicio de fletes programados para empresas y particulares Depósito, Distribución y Repartos Viajes al interior del país Servicio de puerta a puerta Mudanzas y traslados Peones y changarines (Opcional) Cargas con Temperatura Controlada.</a>               
         </div>
         <div class="main-servicios">
             <div class="image-servicios">
-                <img src="/imagenes/servicio-armado.png">
+                <img src="imagenes/servicio-armado.png">
             </div>
             <a><i><strong>¡Servicios Cubiertos! </strong></i><br>¿Sabías que contamos con un seguro que proteje tu mercaderia durante el transporte. Queremos brindarte el #Servicio que te mereces.</a>
         </div>
         <div class="main-servicios">
             <div class="image-servicios">
-                <img src="/imagenes/conexion.png">
+                <img src="imagenes/conexion.png">
             </div>
             <a><i><strong>¡Servicios Cubiertos! </strong></i> <br>Te ofrecemos la mejor conexión directa nacional a todas las unidades!</a>
         </div>
         <div class="main-servicios">
             <div class="image-servicios">
-                <img src="/imagenes/furgones.png">
+                <img src="imagenes/furgones.png">
             </div>
             <a><i><strong>¡Servicios Cubiertos! </strong></i> <br>Tenemos unidades móviles con furgones aptos para precintar. Nuestra <span>#Amplia</span> flota, nos permite realizar trabajos en simultaneo para así poder llegar y darle a nuestros clientes, el <span>#Servicio </span>que se merecen!</a>
         </div>
@@ -76,7 +76,7 @@
             <div class="container-body">
 
                 <div class="footer-image">
-                    <img src="/imagenes/footer-logo.png"></a>
+                    <img src="imagenes/footer-logo.png"></a>
                 </div>
 
                     <div class="column1">
@@ -88,12 +88,12 @@
                 <h1>Redes Sociales</h1>
 
                 <div class="row">
-                    <a href="https://www.facebook.com/logistica29deabril/?ref=page_internal" target="_blank"><img src="/imagenes/facebook.png"></a>
+                    <a href="https://www.facebook.com/logistica29deabril/?ref=page_internal" target="_blank"><img src="imagenes/facebook.png"></a>
                         <label>Siguenos en Facebook </label>
                 </div>
 
                 <div class="row">
-                    <a href="https://www.instagram.com/logistica29deabril/" target="_blank"><img src="/imagenes/instagram.png"></a>
+                    <a href="https://www.instagram.com/logistica29deabril/" target="_blank"><img src="imagenes/instagram.png"></a>
                         <label>Siguenos en Instagram </label>
                 </div>
             </div>
@@ -103,22 +103,22 @@
                 <h1>Contactos</h1>
 
                 <div class="row2">
-                        <img src="/imagenes/celular.jpg">
+                        <img src="imagenes/celular.jpg">
                         <label>+54 11 38515-4494</label>
                 </div>
 
                     <div class="row2">
-                    <img src="/imagenes/telefono.png">
+                    <img src="imagenes/telefono.png">
                     <label>1535362624</label>
                     </div>
 
                     <div class="row2">
-                        <img src="/imagenes/email.png">
+                        <img src="imagenes/email.png">
                         <label>logistica29deabril@hotmail.com</label>
                 </div>
 
                 <div class="row2">
-                        <img src="/imagenes/gmail.png">
+                        <img src="imagenes/gmail.png">
                         <label>leon@logistica29abril.com</label>
                 </div>
                 </div>
