cambio definitivo para responsive design y mobile first.

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
                 <img class="radius" src="imagenes/logo.png">
                 <ul class="menu-link">              
                     <li>
-                        <a href="#">¿Quienes Somos?</a>
+                        <a href="#quienes-somos">¿Quienes Somos?</a>
                     </li>
                     <li>
                         <a href="#experiencia">Experiencia</a>
@@ -30,12 +30,12 @@
     </header>
     <div class="hero-image">
         <div class="main-quienes">
-            <h2 class="title-quienes">¿Quienes Somos?</h2>
+            <h2 id="quienes-somos" class="title-quienes">¿Quienes Somos?</h2>
             <div class="parrafo">
                 <p>Logística 29 de abril, es una empresa de transporte creada en el año 2009 por personas con gran experiencia en el rubro, que presta un servicio eficiente y efectivo, considerando la importancia de manipular su producto y de entregarlo en tiempo y forma de la manera más conveniente y preservando cuidadosamente la imagen de su empresa.</p>
             </div> 
                 <div class="main-parrafo2">
-                    <h2 class="title-exp">Experiencia</h2>
+                    <h2 id="experiencia" class="title-exp">Experiencia</h2>
                     <div class="parrafo-2">
                         <p>Logística 29 de abril, es una empresa de transporte con mas de 5 años en el mercado, creada por personas con gran experiencia en el rubro.</p>
                     </div>
