--- a/index.html
+++ b/index.html
@@ -5,28 +5,26 @@
     <link rel="stylesheet" href="style.css">
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimun-scale=1.0">
     <title>29DeAbril</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;1,100;1,300;1,400;1,500&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
-        <div class="main-menu">
-            <div class="menu">
-                <img class="radius" src="imagenes/logo.png">
-                <ul class="menu-link">              
-                    <li>
-                        <a href="#quienes-somos">¿Quienes Somos?</a>
-                    </li>
-                    <li>
-                        <a href="#experiencia">Experiencia</a>
-                    </li>     
-                    <li>
-                        <a href="#servicios">Servicios</a>
-                    </li>
-                    <li>
-                        <a href="#contacto">Contacto</a>
-                    </li>
-                </ul>
-            </div>
-        </div> 
+        <a href="index.html"><img id="logo" src="imagenes/logo.jpg"></a>
+        <ul class="menu-link">              
+            <li>
+                <a href="#quienes-somos">¿Quienes Somos?</a>
+            </li>
+            <li>
+                <a href="experiencia.html">Experiencia</a>
+            </li>     
+            <li>
+                <a href="#servicios">Servicios</a>
+            </li>
+            <li>
+                <a href="#contacto">Contacto</a>
+            </li>
+        </ul>
     </header>
     <div class="hero-image">
         <div class="main-quienes">
