--- a/servicios.html
+++ b/servicios.html
@@ -2,15 +2,15 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="servicios.css">
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimun-scale=1.0">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;700;900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;1,100;1,300;1,400;1,500&display=swap" rel="stylesheet">
     <title>29DeAbril</title>
 </head>
 <body>
     <header>
-                <img class="radius" src="imagenes/logo.jpg">
+                <a href="index.html"><img class="radius" src="imagenes/logo.jpg"></a>
                 <ul class="menu-link">              
                     <li>
                         <a href="quienes-somos.html">¿Quienes Somos?</a>
@@ -26,18 +26,10 @@
                     </li>
                 </ul>
     </header>
-    <div class="hero-image">
-        <div class="titulo">
-            <h1>Transportes y Fletes</h1>
-            <p>En Logística 29 de Abril trabajamos con responsabilidad, empeño y confianza. Brindamos la mejor atención personalizada.</p>
-        </div>
-    </div>
-
-        <div class="servicios-h1">
-            <h1>¡Servicios Cubiertos!</h1>
-        </div>
-
-    <section id="servicios" class="container-grid">
+    <div class="servicios-h1"> 
+        <h1>Servicios</h1>
+     </div>
+    <section id="servicios" style="position: relative; width: 960px;">
         <div class="main-servicios">
             <div class="image-servicios">
                 <img src="imagenes/sevicios.jpg">
