--- a/experiencia.html
+++ b/experiencia.html
@@ -2,21 +2,21 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="experiencia.css">
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimun-scale=1.0">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;700;900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;1,100;1,300;1,400;1,500&display=swap" rel="stylesheet">
     <title>29DeAbril</title>
 </head>
 <body>
     <header>
-                <img class="radius" src="imagenes/logo.jpg">
+                <a href="index.html"><img class="radius" src="imagenes/logo.jpg"></a>
                 <ul class="menu-link">              
                     <li>
                         <a href="quienes-somos.html">¿Quienes Somos?</a>
                     </li>
                     <li>
-                        <a href="experiencia.html">Experiencia</a>
+                        <a href="#experiencia">Experiencia</a>
                     </li>     
                     <li>
                         <a href="servicios.html">Servicios</a>
@@ -26,46 +26,17 @@
                     </li>
                 </ul>
     </header>
-    <div class="hero-image">
-        <div class="titulo">
-            <h1>Transportes y Fletes</h1>
-            <p>En Logística 29 de Abril trabajamos con responsabilidad, empeño y confianza. Brindamos la mejor atención personalizada.</p>
-        </div>
-    </div>
-
-        <div class="servicios-h1">
-            <h1>¡Servicios Cubiertos!</h1>
-        </div>
-
-    <section id="servicios" class="container-grid">
-        <div class="main-servicios">
-            <div class="image-servicios">
-                <img src="imagenes/sevicios.jpg">
+    <div class="titulo">
+        <h1>Experiencia</h1>
+    </div> 
+        <div class="info">
+         <img src="imagenes/experiencia.jpg">
+             <div class="info-2">
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veniam suscipit minima, reprehenderit laboriosam quidem corporis, harum modi maiores qui expedita facere necessitatibus aut, dicta voluptate? Temporibus tenetur illo consequuntur iure!</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veniam suscipit minima, reprehenderit laboriosam quidem corporis, harum modi maiores qui expedita facere necessitatibus aut, dicta voluptate? Temporibus tenetur illo consequuntur iure!</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veniam suscipit minima, reprehenderit laboriosam quidem corporis, harum modi maiores qui expedita facere necessitatibus aut, dicta voluptate? Temporibus tenetur illo consequuntur iure!</p>
             </div>
-            <a> <i><strong>¡Servicios Cubiertos! </strong></i><br>Servicio de fletes programados para empresas y particulares Depósito, Distribución y Repartos Viajes al interior del país Servicio de puerta a puerta Mudanzas y traslados Peones y changarines (Opcional) Cargas con Temperatura Controlada.</a>               
         </div>
-        <div class="main-servicios">
-            <div class="image-servicios">
-                <img src="imagenes/servicio-armado.png">
-            </div>
-            <a><i><strong>¡Servicios Cubiertos! </strong></i><br>¿Sabías que contamos con un seguro que proteje tu mercaderia durante el transporte. Queremos brindarte el #Servicio que te mereces.</a>
-        </div>
-        <div class="main-servicios">
-            <div class="image-servicios">
-                <img src="imagenes/conexion.png">
-            </div>
-            <a><i><strong>¡Servicios Cubiertos! </strong></i> <br>Te ofrecemos la mejor conexión directa nacional a todas las unidades!</a>
-        </div>
-        <div class="main-servicios">
-            <div class="image-servicios">
-                <img src="imagenes/furgones.png">
-            </div>
-            <a><i><strong>¡Servicios Cubiertos! </strong></i> <br>Tenemos unidades móviles con furgones aptos para precintar. Nuestra <span>#Amplia</span> flota, nos permite realizar trabajos en simultaneo para así poder llegar y darle a nuestros clientes, el <span>#Servicio </span>que se merecen!</a>
-        </div>
-    </section>
-    <div class="separacion">
-
-    </div>
     <footer id="contacto" class="footer">
         <div class="container-footer-all">
             <div class="container-body">
