--- a/experiencia.html
+++ b/experiencia.html
@@ -11,6 +11,8 @@
 <body>
     <header>
                 <a href="index.html"><img class="radius" src="imagenes/logo.jpg"></a>
+                <input type="checkbox" id="menu">
+                <label class="label1" for="menu">☰</label>
                 <ul class="menu-link">              
                     <li>
                         <a href="quienes-somos.html">¿Quienes Somos?</a>
@@ -29,12 +31,11 @@
     <div class="titulo">
         <h1>Experiencia</h1>
     </div> 
+    <img class="imagen" src="imagenes/experiencia.jpg">
         <div class="info">
-         <img src="imagenes/experiencia.jpg">
              <div class="info-2">
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veniam suscipit minima, reprehenderit laboriosam quidem corporis, harum modi maiores qui expedita facere necessitatibus aut, dicta voluptate? Temporibus tenetur illo consequuntur iure!</p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veniam suscipit minima, reprehenderit laboriosam quidem corporis, harum modi maiores qui expedita facere necessitatibus aut, dicta voluptate? Temporibus tenetur illo consequuntur iure!</p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veniam suscipit minima, reprehenderit laboriosam quidem corporis, harum modi maiores qui expedita facere necessitatibus aut, dicta voluptate? Temporibus tenetur illo consequuntur iure!</p>
+                <p>El personal de coordinación establece comunicación telefónica con los móviles periódicamente, con la finalidad de obtener información personalizada acerca de la ubicación y del estado del recorrido brindando un mejor servicio</p>
+                <p>Son mas de 10 años de experiencia que nos acompañan, y tenemos un personal capacitado para desempeñar cada una de las actividades de nuestra empresa.</p>
             </div>
         </div>
     <footer id="contacto" class="footer">
@@ -70,7 +71,7 @@
 
                 <div class="row2">
                         <img src="imagenes/whatsapp-logo.png">
-                        <label>+54 11 38515-4494</label>
+                        <label>+54 11 3247-9700</label>
                 </div>
 
                     <div class="row2">
