--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 <body>
     <header>
                 <img class="radius" src="imagenes/logo.jpg">
+                <input type="checkbox" id="menu">
+                <label class="label1" for="menu">☰</label>
                 <ul class="menu-link">              
                     <li>
                         <a href="quienes-somos.html">¿Quienes Somos?</a>
@@ -99,7 +101,7 @@
 
                 <div class="row2">
                         <img src="imagenes/whatsapp-logo.png">
-                        <label>+54 11 38515-4494</label>
+                        <label>+54 1132479700</label>
                 </div>
 
                     <div class="row2">
