--- a/servicios.html
+++ b/servicios.html
@@ -11,6 +11,8 @@
 <body>
     <header>
                 <a href="index.html"><img class="radius" src="imagenes/logo.jpg"></a>
+                <input type="checkbox" id="menu">
+                <label class="label1" for="menu">☰</label>
                 <ul class="menu-link">              
                     <li>
                         <a href="quienes-somos.html">¿Quienes Somos?</a>
@@ -29,7 +31,7 @@
     <div class="servicios-h1"> 
         <h1>Servicios</h1>
      </div>
-    <section id="servicios" style="position: relative; width: 960px;">
+    <section id="servicios">
         <div class="main-servicios">
             <div class="image-servicios">
                 <img src="imagenes/sevicios.jpg">
@@ -55,8 +57,25 @@
             <a><i><strong>¡Servicios Cubiertos! </strong></i> <br>Tenemos unidades móviles con furgones aptos para precintar. Nuestra <span>#Amplia</span> flota, nos permite realizar trabajos en simultaneo para así poder llegar y darle a nuestros clientes, el <span>#Servicio </span>que se merecen!</a>
         </div>
     </section>
-    <div class="separacion">
-
+    <h2 id="titulo">¡SERVICIOS CUBIERTOS!</h2>
+    <div class="separacion">   
+        <ul>
+            <li>Servicio de fletes programados para empresas y particulares</li>
+            <li>Depósito, Distribución y Repartos</li>
+            <li>Viajes al interior del país</li>
+            <li>Servicio de puerta a puerta</li>
+            <li>Mudanzas y traslados</li>
+            <li>Peones y changarines (Opcional)</li>
+            <li>Cargas con Temperatura Controlada</li>
+        </ul>
+        <ul>
+                <li>Seguro de mercaderías (Opcional) </li>
+                <li>Personal con seguro de accidentes personales, elementos de protección personal, <br>buena presencia y gran predisposición para tareas de carga y descarga.</li>
+                <li>Conexión directa nacional con todas las unidades</li>
+                <li>Unidades móviles con furgones aptos para precintar</li>
+                <li>Servicio de custodia móvil armada (Opcional</li>
+                <li>Departamento de HSE para el cumplimento de todos los estándares de calidad. <br>Tanto para cargas peligrosas como para generales</li>
+        </ul>
     </div>
     <footer id="contacto" class="footer">
         <div class="container-footer-all">
@@ -91,7 +110,7 @@
 
                 <div class="row2">
                         <img src="imagenes/whatsapp-logo.png">
-                        <label>+54 11 38515-4494</label>
+                        <label>+54 11 3247-9700</label>
                 </div>
 
                     <div class="row2">
