--- a/contacto.html
+++ b/contacto.html
@@ -11,6 +11,8 @@
 <body>
     <header>
                 <a href="index.html"><img class="radius" src="imagenes/logo.jpg"></a>
+                <input type="checkbox" id="menu">
+                <label class="label1" for="menu">☰</label>
                 <ul class="menu-link">              
                     <li>
                         <a href="quienes-somos.html">¿Quienes Somos?</a>
@@ -47,7 +49,7 @@
         <div class="column-2">
             <div class="main-info">
                 <img src="imagenes/telefono01.png" style="width: 25px;">
-                <p>+54 11 38515-4494</p>
+                <p>+54 11 3247-9700</p>
             </div>
         </div>
         <iframe id="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3274.018253901368!2d-58.50946781186585!3d-34.85576866043769!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcd6d5619305d9%3A0xf758084cd6924f3d!2sR%C3%ADo%20Pilcomayo%20435%2C%20Ezeiza%2C%20Provincia%20de%20Buenos%20Aires!5e0!3m2!1ses-419!2sar!4v1612454328547!5m2!1ses-419!2sar" width="100%" height="350" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
@@ -85,7 +87,7 @@
     
                     <div class="row2">
                             <img src="imagenes/whatsapp-logo.png">
-                            <label>+54 11 38515-4494</label>
+                            <label>+54 11 3247-9700</label>
                     </div>
     
                         <div class="row2">
