--- a/quienes-somos.html
+++ b/quienes-somos.html
@@ -11,6 +11,8 @@
 <body>
     <header>
                 <a href="index.html"><img class="radius" src="imagenes/logo.jpg"></a>
+                <input type="checkbox" id="menu">
+                <label class="label1" for="menu">☰</label>
                 <ul class="menu-link">              
                     <li>
                         <a href="#quienes-somos">¿Quienes Somos?</a>
@@ -30,11 +32,9 @@
         <h1>¿Quienes Somos?</h1>
     </div>
     <div class="img-info">
-        <img src="imagenes/quienes.jpg">
+        <img src="imagenes/29deabril.png">
         <div class="info">
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Magnam assumenda illum similique aut. Amet dolorum a provident odit suscipit minus. Sapiente ea amet nulla non perspiciatis, laboriosam quia eaque impedit.</p>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Magnam assumenda illum similique aut. Amet dolorum a provident odit suscipit minus. Sapiente ea amet nulla non perspiciatis, laboriosam quia eaque impedit.</p>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Magnam assumenda illum similique aut. Amet dolorum a provident odit suscipit minus. Sapiente ea amet nulla non perspiciatis, laboriosam quia eaque impedit.</p>
+            <p>Logística 29 de abril, es una empresa de transporte creada en el año 2009 por personas con gran experiencia en el rubro, que presta un servicio eficiente y efectivo considerando la importancia de manipular su producto y de entregarlo en tiempo y forma de la manera más conveniente y preservando cuidadosamente la imagen de su empresa.</p>
          </div>
     </div>
     <footer id="contacto" class="footer">
@@ -70,7 +70,7 @@
 
                 <div class="row2">
                         <img src="imagenes/whatsapp-logo.png">
-                        <label>+54 11 38515-4494</label>
+                        <label>+54 11 3247-9700</label>
                 </div>
 
                     <div class="row2">
