Añado la flota disponible.

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             <div class="image-servicios">
                 <img src="imagenes/servicio-armado.png">
             </div>
-            <a><i><strong>¡Servicios Cubiertos! </strong></i><br>¿Sabías que contamos con un seguro que proteje tu mercaderia durante el transporte. Queremos brindarte el #Servicio que te mereces.</a>
+            <a><i><strong>¡Servicios Cubiertos! </strong></i><br>Sabías que contamos con un seguro que proteje tu mercaderia durante el transporte. Queremos brindarte el #Servicio que te mereces.</a>
         </div>
         <div class="main-servicios">
             <div class="image-servicios">
@@ -66,7 +66,37 @@
         </div>
     </section>
     <div class="separacion">
-
+    </div>
+    <h1 id="flota">Nuestra Flota</h1>
+    <div class="container-flota">
+        <div class="flota">
+            <img src="imagenes/categoria1.png">
+            <p><strong><i>CATEGORIA 1 </i></strong> <br>Partner-Fiorino<br> Carga útil 500 Kilos Volúmen de carga: 2.5 m3 <br><strong>Cantidad de unidades 9</strong></p>    
+        </div>
+        <div class="flota">
+            <img src="imagenes/categoria2.png">
+            <p><strong><i>CATEGORIA 2 </i></strong> <br>Master (2)<br> Carga útil 1300 Kilos Volúmen de carga: 5 m3 <br> (de 14 a 16 pallets)<br><strong>Cantidad de unidades 5</strong></p>
+        </div>
+        <div class="flota">
+            <img src="imagenes/categoria3.png">
+            <p><strong><i>CATEGORIA 3 </i></strong> <br>Sprinter Abierta y con lona<br> Carga útil 3800 Kilos Volúmen de carga: 15 m3<br><strong>Cantidad de unidades 3</strong></p>
+        </div>
+        <div class="flota">
+            <img src="imagenes/categoria4.png">
+            <p><strong><i>CATEGORIA 4 </i></strong> <br>710 - Daily - DFM Ab. y Lona (7)<br> Carga útil 5000 Kilos Volúmen de carga: 20 m3<br><strong>Cantidad de unidades 10</strong></p>
+        </div>
+        <div class="flota">
+            <img src="imagenes/categoria5.png">
+            <p><strong><i>CATEGORIA 5 </i></strong> <br>Balancines con y sin frío<br> Carga útil 5000 Kilos Volúmen de carga: 35 m3<br><strong>Cantidad de unidades 5</strong></p>
+        </div>
+        <div class="flota">
+            <img src="imagenes/categoria6.png">
+            <p><strong><i>CATEGORIA 6 </i></strong> <br>Semi-remolque con o sin frío (8) <br> Carga útil 22000 Kilos Volúmen de carga: 90 m3<br><strong>Cantidad de unidades 3</strong></p>
+        </div>
+        <div class="flota">
+            <img src="imagenes/categoria7.png">
+            <p><strong><i>CATEGORIA 7 </i></strong> <br>Semi-remolque con arco y lona Porta contenedores de 20 y 40 pies<br> Carga útil 28 TN Volúmen de carga: 28 m3<br><strong>Cantidad de unidades 5</strong></p>
+        </div>
     </div>
     <footer id="contacto" class="footer">
         <div class="container-footer-all">
