Mejoro el responsive

--- a/servicios.html
+++ b/servicios.html
@@ -59,7 +59,7 @@
     </section>
     <h2 id="titulo">¡SERVICIOS CUBIERTOS!</h2>
     <div class="separacion">   
-        <ul>
+        <ul class="lista-servicios">
             <li>Servicio de fletes programados para empresas y particulares</li>
             <li>Depósito, Distribución y Repartos</li>
             <li>Viajes al interior del país</li>
@@ -68,12 +68,12 @@
             <li>Peones y changarines (Opcional)</li>
             <li>Cargas con Temperatura Controlada</li>
         </ul>
-        <ul>
+        <ul class="lista-servicios">
                 <li>Seguro de mercaderías (Opcional) </li>
                 <li>Personal con seguro de accidentes personales, elementos de protección personal, <br>buena presencia y gran predisposición para tareas de carga y descarga.</li>
                 <li>Conexión directa nacional con todas las unidades</li>
                 <li>Unidades móviles con furgones aptos para precintar</li>
-                <li>Servicio de custodia móvil armada (Opcional</li>
+                <li>Servicio de custodia móvil armada (Opcional)</li>
                 <li>Departamento de HSE para el cumplimento de todos los estándares de calidad. <br>Tanto para cargas peligrosas como para generales</li>
         </ul>
     </div>
